# weavex

./: .gitignore  .prettierignore  .prettierrc  .rules  LICENSE.md  QWEN.md  README.md  latest.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
doc/: GIT_COMMANDS.md  TO-DO_LICENSE.md  test-git.js  布局算法逻辑.md  怎么判断开发环境.md  更新程序.md
src/: App.vue  main.ts  route.ts  router.ts  vite-env.d.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: FramePage.vue  MenuFrame.vue  NodeDetailForm.vue  PoCreateTaskButton.vue  PoNavbar.vue  PoTaskList.vue  SortableList.vue  TaskList.vue  WindowsTitleBar.vue
src/composables/: useAppInit.ts  useTheme.ts
src/lib/: combo.ts  fs.ts  index.ts  layout.ts  logger.ts  node.ts  storage.ts  transform.ts
src/store/: count.ts  graph-detail.ts  graph-list.ts  graph-storage.ts  index.ts  inex.ts  task.ts
src/stores/: config.ts  context.ts  current.ts  graph-detail.ts  graph-list.ts  graph-storage.ts  graphStatus.ts  index.ts  note.ts  repo.ts  runtime.ts  storage.ts  task.ts
src/test/: graphs.test.ts
src/types/: index.ts  model.ts  p-graph.ts  p-node.ts  type.d.ts
src/utils/: c-node.ts  custom-layout.ts  data-util.ts  fsUtils.ts  function-util.ts  functionUtils.ts  graph-data-util.ts  graph-util.ts  graphUtils.ts  index.ts  mock-data.ts  mock.ts  node-beans-util.ts  node-util.ts  nodeUtils.ts  (+2 more)
test/: c-node.test.ts  dagre.test.ts  p-graph.test.ts  test.test.ts
(+65 files in other folders)
